ajout calcul mlp