@@ -88,18 +88,13 @@ public class TerritoryCompass extends Perception{
 
     @Override
     public List<Double> getPerceptionsValuesNormalise() {
-        List<Double> perceptionsValues = getPerceptionValues().getFirst().vector();
-        List<Double> perceptionsValuesNormalise = new ArrayList<>();
-        perceptionsValuesNormalise.add(perceptionsValues.get(0)/maxAngle);
-        if (perceptionsValues.get(1) > maxDistanceVision)
-            perceptionsValuesNormalise.add(0.0);
+        List<Double> perceptionsValuesNormalise = new ArrayList<>(getPerceptionValues().getFirst().vector());
+        perceptionsValuesNormalise.set(0, perceptionsValuesNormalise.get(0)/maxAngle);
+        if (perceptionsValuesNormalise.get(1) > maxDistanceVision)
+            perceptionsValuesNormalise.set(1, 0.0);
         else
-            perceptionsValuesNormalise.add(perceptionsValues.get(1)/maxDistanceVision);
+            perceptionsValuesNormalise.set(1, perceptionsValuesNormalise.get(1)/maxDistanceVision);
         return perceptionsValuesNormalise;
     }
 
-    @Override
-    public int getNumberOfPerceptions() {
-        return getPerceptionValues().getFirst().vector().size();
-    }
 }
